--- a/index.html
+++ b/index.html
@@ -30,21 +30,43 @@
         </main>
         <div class="date">April 2020</div>
 
-        <!-- a raise in the sun -->
+        <!-- a raisin in the sun -->
         <div class="main">
+            <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="src">
             <h3> A raisin In The Sun</h3>
+            <p>April 6,2020 - March 12,2021</p>
+            <p>Griot Theater, 233 State St. Chicago, II.</p>
+            <div id="Price">$75</div>
+            <a href="#" class="read-more-button">Read More</a>
         </div>
         <div class="main">
+            <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="src">
             <h3>A Raisin In The Sun</h3>
+            <p>April 6,2020 - March 12,2021</p>
+            <p>Griot Theater, 233 State St. Chicago, II.</p>
+            <div id="Price">$75</div>
+            <a href="#" class="read-more-button">Read More</a>
         </div>
         <div class="main">
+            <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="src">
             <h3>A Raisin In The Sun</h3>
+            <p>April 6,2020 - March 12,2021</p>
+            <p>Griot Theater, 233 State St. Chicago, II.</p>
+            <div id="Price">$75</div>
+            <a href="#" class="read-more-button">Read More</a>
         </div>
         <div class="main">
-            <h3> </h3>
+            <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="src">
+            <h3>A Raisin In The Sun</h3>
+            <p>April 6,2020 - March 12,2021</p>
+            <p>Griot Theater, 233 State St. Chicago, II.</p>
+            <div id="Price">$75</div>
+            <a href="#" class="read-more-button">Read More</a>
         </div>
     </div>
-    
+    <footer>
+        
+    </footer>
 </body>
 </html>
 
