--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="Theater-page">
         <!-- header -->
         <header>
+            <div class="container">
             <h1>Griot Theater</h1>
-        </header>
         <!-- navigation -->
         <nav>
             <ul>
@@ -23,10 +23,16 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+    </div>
+    </header>
         <!-- Featured shows -->
         <main>
+            <div class="theater-image">
+           <img src="assets/theater-image-background.png" alt="backgrounding">
+           <div class="overlay">
            <h2>Featured Shows</h2>
-           <img src="assets/theater-image-background.png" alt="backgroundimg">
+        </div>
+        </div>
         </main>
         <div class="date">April 2020</div>
 
