--- a/index.html
+++ b/index.html
@@ -43,55 +43,73 @@
 
         <!-- A Raisin in the Sun -->
         <section class="tickets">
-            <div class="date">April 2020</div>
-            <div class="ticket-box">
-                <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="ticket-image">
-                <div class="ticket-info"></div>
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theater, 233 State St. Chicago, IL.</p>
-                    <div class="price">$75</div>
-                    <a href="#" class="read-more-button">Read More</a>
-            `   </div>
+            <div class="date">
+                <p>April 2020</p>
             </div>
-            <hr>
-            <div class="ticket-box">
-                <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="ticket-image">
-                <div class="ticket-info"></div>
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theater, 233 State St. Chicago, IL.</p>
-                    <div class="price">$75</div>
-                    <a href="#" class="read-more-button">Read More</a>
-            `   </div>
-            </div>
-            <hr>
-            <div class="ticket-box">
-                <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="ticket-image">
-                <div class="ticket-info"></div>
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theater, 233 State St. Chicago, IL.</p>
-                    <div class="price">$75</div>
-                    <a href="#" class="read-more-button">Read More</a>
-            `   </div>
-            </div>
-            <hr>
-            <div class="ticket-box">
-                <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="Theater" class="ticket-image">
-                <div class="ticket-info"></div>
-                    <h3>A Raisin In The Sun</h3>
-                    <p>April 6, 2020 - March 20, 2020</p>
-                    <p>Griot Theater, 233 State St. Chicago, IL.</p>
-                    <div class="price">$75</div>
-                    <a href="#" class="read-more-button">Read More</a>
-            `   </div>
-            </div>
+                <div class="ticket-container">
+                    <div class="box">
+                        <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="people acting" class="ticket-img">
+                    </div>
+                    <div class="ticket-info">
+                        <div class="show-title">A Raisin In The Sun</div>
+                        <div class="show-date">
+                            <p>April 6,2020 - March 12,2021</p>
+                        </div>
+                        <div class="show-location">
+                            <p>Griot Theater, 233 State St. Chicago, II.</p>
+                        </div>
+                        <div class="show-price">$75</div>
+                        <a href="#" class="read-more-button">Read More</a>
+                    </div>
+<hr>
+                    <div class="ticket-img">
+                        <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="people acting" class="ticket-img">
+                    </div>
+                    <div class="ticket-info">
+                        <div class="show-title">A Raisin In The Sun</div>
+                        <div class="show-date">
+                            <p>April 6,2020 - March 12,2021</p>
+                        </div>
+                        <div class="show-location">
+                            <p>Griot Theater, 233 State St. Chicago, II.</p>
+                        </div>
+                        <div class="show-price">$75</div>
+                        <a href="#" class="read-more-button">Read More</a>
+                    </div>
+                    <div class="ticket-img">
+                        <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="people acting" class="ticket-img">
+                    </div>
+                    <div class="ticket-info">
+                        <div class="show-title">A Raisin In The Sun</div>
+                        <div class="show-date">
+                            <p>April 6,2020 - March 12,2021</p>
+                        </div>
+                        <div class="show-location">
+                            <p>Griot Theater, 233 State St. Chicago, II.</p>
+                        </div>
+                        <div class="show-price">$75</div>
+                        <a href="#" class="read-more-button">Read More</a>
+                    </div>
+                    <div class="ticket-img">
+                        <img src="assets/a-raisin-in-the-sun-theater-1.png" alt="people acting" class="ticket-img">
+                    </div>
+                    <div class="ticket-info">
+                        <div class="show-title">A Raisin In The Sun</div>
+                        <div class="show-date">
+                            <p>April 6,2020 - March 12,2021</p>
+                        </div>
+                        <div class="show-location">
+                            <p>Griot Theater, 233 State St. Chicago, II.</p>
+                        </div>
+                        <div class="show-price">$75</div>
+                        <a href="#" class="read-more-button">Read More</a>
+                    </div>
+                </div>
         </section>
         <footer>
             <div class="bottom">
                 <div class="map">
-                    <img src="Flexbox Music/chicago map screenshot.png" alt="Map" class="mapimg">
+                    <img src="assets/chicago map screenshot.png" alt="Map" class="mapimg">
                 </div>
                 <div class="footinfo">
                     <div class="foothead">Info</div>
